New mockups added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,7 +499,7 @@ nav .dropdown ul li.sub_dropdown ul {
 }
 
 .other_news > .news_piece {
-    width: 25vw;
+    width: 25%;
 }
 
 .secundary_news > .news_piece .news_title {
