--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ header {
 body {
     margin: 0;
     color: rgb(104 104 104);
-    font-family: Arial;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
