--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 header {
     height: 5em;
-    width: 100vw;
+    width: 100%;
     display: flex;
     box-shadow: 0px 3px 1em rgba(0, 0, 0, .1);
     align-items: center;
@@ -70,7 +70,7 @@ nav .dropdown ul {
     display: none;
     visibility: hidden;
     padding: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 nav .dropdown ul li {
@@ -371,7 +371,7 @@ nav .dropdown ul li.sub_dropdown ul {
 
 .columns {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: auto;
 }
 
