--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 header {
-    height: 5em;
+    height: 5rem;
     width: 100%;
     display: flex;
-    box-shadow: 0px 3px 1em rgba(0, 0, 0, .1);
+    box-shadow: 0px 3px 1rem rgba(0, 0, 0, .1);
     align-items: center;
     justify-content: space-around;
     text-transform: uppercase;
-    padding: 0.5em 1em;
+    padding: 0.5rem 1rem;
     box-sizing: border-box;
 }
 
@@ -27,11 +27,11 @@ a {
     align-items: center;
     font-weight: bold;
     text-decoration: unset;
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 .logo img {
-    height: 4.5em;
+    height: 4.5rem;
 }
 
 nav {
@@ -60,13 +60,13 @@ nav .dropdown {
 }
 
 nav .dropdown ul {
-    box-shadow: 0px 3px 1em rgba(0, 0, 0, .1);
+    box-shadow: 0px 3px 1rem rgba(0, 0, 0, .1);
     backdrop-filter: blur(5px);
     background-color: rgb(255 255 255 / 85%);
     position: absolute;
     top: 100%;
     left: 0;
-    min-width: 10em;
+    min-width: 10rem;
     display: none;
     visibility: hidden;
     padding: 0;
@@ -74,7 +74,7 @@ nav .dropdown ul {
 }
 
 nav .dropdown ul li {
-    padding: 1em;
+    padding: 1rem;
     margin: 0;
     display: flex;
     justify-content: space-between;
@@ -108,7 +108,7 @@ nav .dropdown ul li.sub_dropdown ul {
 
 .dropdown_arrow,
 .icon>img {
-    width: 1em;
+    width: 1rem;
 }
 
 .dropdown_arrow {
@@ -130,15 +130,15 @@ nav .dropdown ul li.sub_dropdown ul {
 }
 
 .searcher>img {
-    width: 1.25em;
+    width: 1.25rem;
 }
 
 @media screen and (max-width: 600px) {
     nav {
         height: fit-content;
         width: 100%;
-        top: 5em;
-        font-size: 1em;
+        top: 5rem;
+        font-size: 1rem;
         background-color: #ffffff00;
         backdrop-filter: blur(5px);
         bottom: 0;
@@ -153,7 +153,7 @@ nav .dropdown ul li.sub_dropdown ul {
         margin: 0;
         display: grid;
         visibility: visible;
-        box-shadow: 0px 3px 1em rgba(0, 0, 0, .1);
+        box-shadow: 0px 3px 1rem rgba(0, 0, 0, .1);
         backdrop-filter: blur(5px);
         background-color: rgb(255 255 255 / 85%);
     }
@@ -176,15 +176,15 @@ nav .dropdown ul li.sub_dropdown ul {
     nav .dropdown ul li.sub_dropdown:hover ul {
         display: grid;
         visibility: visible;
-        font-size: .9em;
+        font-size: .9rem;
         position: relative;
-        padding: 0 0.5em;
+        padding: 0 0.5rem;
         top: 0;
         left: 0;
     }
 
     nav .dropdown ul li.sub_dropdown:hover ul {
-        padding: 1em 0.5em 0;
+        padding: 1em 0.5rem 0;
     }
 
     nav a {
@@ -222,23 +222,23 @@ nav .dropdown ul li.sub_dropdown ul {
     .sub_dropdown>ul {
         display: grid;
         visibility: visible;
-        font-size: .9em;
+        font-size: .9rem;
         position: relative;
-        padding: 0 0.5em;
+        padding: 0 0.5rem;
         top: 0;
         left: 0;
     }
 
     .searcher>img {
-        width: 1.5em;
+        width: 1.5rem;
     }
 
     .hamburger>img {
-        width: 1.7em;
+        width: 1.7rem;
     }
 
     .menu_icons {
-        width: 6em;
+        width: 6rem;
     }
 
     .main_banner {
@@ -254,7 +254,7 @@ nav .dropdown ul li.sub_dropdown ul {
     }
 
     .menu_title {
-        max-width: 15em;
+        max-width: 15rem;
     }
 
     nav .dropdown ul li:not(:last-child)::after {
@@ -376,12 +376,12 @@ nav .dropdown ul li.sub_dropdown ul {
     display: flex;
     background-image: url(../img/locator_background.jpg);
     width: 100%;
-    gap: 2em;
+    gap: 2rem;
     background-position: center;
     justify-content: space-around;
     box-sizing: border-box;
     background-size: cover;
-    padding: 2em 5em;
+    padding: 2rem 5rem;
     overflow: hidden;
 }
 
@@ -392,16 +392,16 @@ nav .dropdown ul li.sub_dropdown ul {
 }
 
 .dojo_locator_text > h3 {
-    font-size: 2em;
+    font-size: 2rem;
     margin: 0;
 }
 
 .dojo_locator_text > p {
-    margin: 0 0 2em;
+    margin: 0 0 2rem;
 }
 
 .dojo_locator_text > span {
-    padding: .5em;
+    padding: .5rem;
     border: 1px solid;
 }
 
@@ -428,12 +428,12 @@ nav .dropdown ul li.sub_dropdown ul {
 }
 
 .locator_banner_map_pointer_second {
-    top: 0em;
+    top: 0;
     left: 16.5em;
 }
 
 .locator_banner_map_pointer_third {
-    bottom: 2em;
+    bottom: 2rem;
     left: .75em;
 }
 
@@ -510,13 +510,13 @@ nav .dropdown ul li.sub_dropdown ul {
     box-sizing: border-box;
     background: linear-gradient(to top, #000000b0 65%, #00000000);
     bottom: 0;
-    padding: 1.5em 0.5em;
+    padding: 1.5em 0.5rem;
     font-weight: bold;
 }
 
 @media screen and (max-width: 600px) {
     .column > a span {
-        padding: .5em;
+        padding: .5rem;
     }
 }
 
@@ -524,7 +524,7 @@ nav .dropdown ul li.sub_dropdown ul {
 
 .separator {
     display: flex;
-    padding: 0.5em;
+    padding: 0.5rem;
     position: relative;
     justify-content: space-around;
     background-color: #ffffff73;
@@ -621,7 +621,6 @@ nav .dropdown ul li.sub_dropdown ul {
 .other_news {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 1rem;
 }
 
@@ -630,12 +629,12 @@ nav .dropdown ul li.sub_dropdown ul {
 }
 
 .secundary_news > .news_piece .news_title {
-    padding: 1.5em 2em 1em;
+    padding: 1.5rem 2rem 1rem;
     font-size: large;
 }
 
 .other_news > .news_piece .news_title {
-    padding: 1.5em 1em 0.75em;
+    padding: 1.5rem 1rem 0.75rem;
     font-size: medium;
 }
 
